# QuickCloner

./: README.md  TODO.md  pyproject.toml  requirements.txt
quick_cloner/: __main__.py  app.py  azdo.py  clone.py  log.py  models.py  utils.py
