[project]
name = "AzCloner"
version = "0.1.0"
description = "A terminal-based TUI for selecting and cloning multiple Azure DevOps repositories."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["textual>=0.38.1", "httpx>=0.27.0", "anyio>=4.3.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
